Added comments to the jupyter notebook

--- a/Project_1B_ Project_Template.ipynb
+++ b/Project_1B_ Project_Template.ipynb
@@ -267,8 +267,10 @@
    "source": [
     "### Query 1. Give me the artist, song title and song’s length in the music app history that was heard during sessionId = 338, and itemInSession = 4\n",
     "First, we need to create the table query1. The table will have the following columns:\n",
-    "artist, song, length, session_id, item_in_session\n",
-    "The primary key will be composed of the session_id, item_in_session and song. The partition key will be composed of the session_id and item_in_session, while the clustering key will be composed of the song attribute."
+    "\n",
+    "**artist, song, length, session_id, item_in_session**\n",
+    "\n",
+    "The primary key will be composed of the session_id, item_in_session and song. The partition key will be composed of the session_id and item_in_session, while the clustering key will be composed of the song attribute. The partition key determines the distribution and uniqueness of the data, that is why the combination of the session_id and item_in_session are used as the partition key. The clustering key determines the order of the data, in this case, the data will be sorted according to the song attribute."
    ],
    "metadata": {
     "collapsed": false,
@@ -337,7 +339,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Query 2. Give me only the following: name of artist, song (sorted by itemInSession) and user (first and last name) for userid = 10, sessionid = 182"
+    "### Query 2. Give me only the following: name of artist, song (sorted by itemInSession) and user (first and last name) for userid = 10, sessionid = 182\n",
+    "\n",
+    "We create the table query2. The table will have the following columns:\n",
+    "\n",
+    "**artist, song, first_name, last_name, user_id, session_id, item_in_session**\n",
+    "\n",
+    "The primary key of this table is composed of: user_id, session_id, item_in_session. The partition key will be composed of the user_id and session_id, while the clustering key will be composed of the item_in_session attribute. Since the clustering key is composed of item_in_session, the data will be sorted according to the item_in_session attribute."
    ]
   },
   {
@@ -406,7 +414,12 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Query 3. Give me every user name (first and last) in my music app history who listened to the song 'All Hands Against His Own'"
+    "### Query 3. Give me every user name (first and last) in my music app history who listened to the song 'All Hands Against His Own'\n",
+    "The table query3 will have the following columns:\n",
+    "\n",
+    "**first_name, last_name, user_id, session_id, song**\n",
+    "\n",
+    "The primary key of this table is composed of: user_id, session_id, song. The partition key will be composed of the user_id and song, while the clustering key will be composed of the session_id attribute. The data in each cluster will be sorted according to the session_id attribute."
    ],
    "metadata": {
     "collapsed": false,
@@ -454,6 +467,7 @@
     "try:\n",
     "    rows = session.execute(query)\n",
     "    df = pd.DataFrame(list(rows), columns=['first_name', 'last_name'])\n",
+    "    display(df)\n",
     "except Exception as e:\n",
     "    print(e)"
    ]
