--- a/Project_1B_ Project_Template.ipynb
+++ b/Project_1B_ Project_Template.ipynb
@@ -178,12 +178,7 @@
    "source": [
     "# Creating a Cluster\n",
     "from cassandra.cluster import Cluster\n",
-    "from cassandra.auth import PlainTextAuthProvider\n",
-    "cloud_config= {\n",
-    "        'secure_connect_bundle': 'secure-connect-mydb.zip'\n",
-    "}\n",
-    "auth_provider = PlainTextAuthProvider('euwRIcCNLZmZQEknqkNagwky', 'r.xAt.UxIXv04uvPq8Ip2oJ+9HZjnNMYydQ1WilaHPjvf8Q5-ZjlSal0r9QxmZxOXsEx-p9WhqYLqZZPtol2p3xRA_Ygi..oJxPBabAjzFhAtsvjxip.wBrkqpbF3gi7')\n",
-    "cluster = Cluster(cloud=cloud_config, auth_provider=auth_provider)\n",
+    "cluster = Cluster()\n",
     "\n",
     "# To establish connection and begin executing queries, need a session\n",
     "session = cluster.connect()"
@@ -419,7 +414,7 @@
     "\n",
     "**first_name, last_name, user_id, session_id, song**\n",
     "\n",
-    "The primary key of this table is composed of: user_id, session_id, song. The partition key will be composed of the user_id and song, while the clustering key will be composed of the session_id attribute. The data in each cluster will be sorted according to the session_id attribute."
+    "The primary key of this table is composed of: user_id, session_id, song. The partition key will be composed of the song attribute, while the clustering key will be composed of the session_id and user_id attributes."
    ],
    "metadata": {
     "collapsed": false,
@@ -430,11 +425,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name 'session' is not defined\n"
+     ]
+    }
+   ],
    "source": [
-    "query = \"CREATE TABLE IF NOT EXISTS query3 (first_name text, last_name text, user_id int, session_id int,  song text,  PRIMARY KEY ((user_id, song), session_id))\"\n",
+    "query = \"CREATE TABLE IF NOT EXISTS query3 (first_name text, last_name text, user_id int, session_id int,  song text,  PRIMARY KEY (song, user_id, session_id))\"\n",
     "try:\n",
     "    session.execute(query)\n",
     "except Exception as e:\n",
