--- a/Project_1B_ Project_Template.ipynb
+++ b/Project_1B_ Project_Template.ipynb
@@ -260,7 +260,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Query 1. Give me the artist, song title and song’s length in the music app history that was heard during sessionId = 338, and itemInSession = 4\n",
+    "### Query 1.(artist_song_length) Give me the artist, song title and song’s length in the music app history that was heard during sessionId = 338, and itemInSession = 4\n",
     "First, we need to create the table query1. The table will have the following columns:\n",
     "\n",
     "**artist, song, length, session_id, item_in_session**\n",
@@ -280,7 +280,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "query = \"CREATE TABLE IF NOT EXISTS query1 (artist text, song text, length float, session_id int, item_in_session int,  PRIMARY KEY (session_id, item_in_session, song))\"\n",
+    "query = \"CREATE TABLE IF NOT EXISTS artist_song_length (session_id int, item_in_session int, song text, artist text, length float, PRIMARY KEY (session_id, item_in_session, song))\"\n",
     "try:\n",
     "    session.execute(query)\n",
     "except Exception as e:\n",
@@ -300,9 +300,9 @@
     "    csvreader = csv.reader(f)\n",
     "    next(csvreader) # skip header\n",
     "    for line in csvreader:\n",
-    "        query = \"INSERT INTO query1 (artist, song, length, session_id, item_in_session)\"\n",
+    "        query = \"INSERT INTO artist_song_length (session_id, item_in_session, song, artist, length)\"\n",
     "        query = query + \" VALUES (%s, %s, %s, %s, %s) \"\n",
-    "        session.execute(query, (line[0], line[9], float(line[5]), int(line[8]), int(line[3])))"
+    "        session.execute(query, (int(line[8]), int(line[3]), line[9], line[0], float(line[5])))"
    ]
   },
   {
@@ -322,7 +322,7 @@
     }
    ],
    "source": [
-    "query = \"SELECT artist, song, length FROM query1 WHERE session_id = 338 AND item_in_session = 4\"\n",
+    "query = \"SELECT artist, song, length FROM artist_song_length WHERE session_id = 338 AND item_in_session = 4\"\n",
     "try:\n",
     "    df = pd.DataFrame(list(session.execute(query)), columns=['artist', 'song', 'length'])\n",
     "    display(df)\n",
@@ -334,7 +334,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Query 2. Give me only the following: name of artist, song (sorted by itemInSession) and user (first and last name) for userid = 10, sessionid = 182\n",
+    "### Query 2.(song_playlist_session) Give me only the following: name of artist, song (sorted by itemInSession) and user (first and last name) for userid = 10, sessionid = 182\n",
     "\n",
     "We create the table query2. The table will have the following columns:\n",
     "\n",
@@ -349,7 +349,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "query = \"CREATE TABLE IF NOT EXISTS query2 (artist text, song text, first_name text, last_name text, user_id int, session_id int, item_in_session int,  PRIMARY KEY ((user_id, session_id), item_in_session))\"\n",
+    "query = \"CREATE TABLE IF NOT EXISTS song_playlist_session (user_id int, session_id int, item_in_session int, artist text, song text, first_name text, last_name text, PRIMARY KEY ((user_id, session_id), item_in_session))\"\n",
     "try:\n",
     "    session.execute(query)\n",
     "except Exception as e:\n",
@@ -366,9 +366,9 @@
     "    csvreader = csv.reader(f)\n",
     "    next(csvreader)\n",
     "    for line in csvreader:\n",
-    "        query = \"INSERT INTO query2 (artist, song, first_name, last_name, user_id, session_id, item_in_session)\"\n",
+    "        query = \"INSERT INTO song_playlist_session (user_id, session_id, item_in_session, artist, song, first_name, last_name)\"\n",
     "        query = query + \" VALUES (%s, %s, %s, %s, %s, %s, %s) \"\n",
-    "        session.execute(query, (line[0], line[9], line[1], line[4], int(line[10]), int(line[8]), int(line[3])))"
+    "        session.execute(query, (int(line[10]), int(line[8]), int(line[3]), line[0], line[9], line[1], line[4]))"
    ],
    "metadata": {
     "collapsed": false,
@@ -391,7 +391,7 @@
     }
    ],
    "source": [
-    "query = \"SELECT artist, song, first_name, last_name FROM query2 WHERE user_id = 10 AND session_id = 182\"\n",
+    "query = \"SELECT artist, song, first_name, last_name FROM song_playlist_session WHERE user_id = 10 AND session_id = 182\"\n",
     "try:\n",
     "    rows = session.execute(query)\n",
     "    df = pd.DataFrame(list(rows), columns=['artist', 'song', 'first_name', 'last_name'])\n",
@@ -409,7 +409,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Query 3. Give me every user name (first and last) in my music app history who listened to the song 'All Hands Against His Own'\n",
+    "### Query 3.(users_listened_song) Give me every user name (first and last) in my music app history who listened to the song 'All Hands Against His Own'\n",
     "The table query3 will have the following columns:\n",
     "\n",
     "**first_name, last_name, user_id, session_id, song**\n",
@@ -437,7 +437,7 @@
     }
    ],
    "source": [
-    "query = \"CREATE TABLE IF NOT EXISTS query3 (first_name text, last_name text, user_id int, session_id int,  song text,  PRIMARY KEY (song, user_id, session_id))\"\n",
+    "query = \"CREATE TABLE IF NOT EXISTS users_listened_song (song text, user_id int, session_id int, first_name text, last_name text,  PRIMARY KEY (song, user_id))\"\n",
     "try:\n",
     "    session.execute(query)\n",
     "except Exception as e:\n",
@@ -455,9 +455,9 @@
     "    csvreader = csv.reader(f)\n",
     "    next(csvreader)\n",
     "    for line in csvreader:\n",
-    "        query = \"INSERT INTO query3 (first_name, last_name, user_id, session_id, song)\"\n",
+    "        query = \"INSERT INTO users_listened_song (song, user_id, first_name, last_name)\"\n",
     "        query = query + \" VALUES (%s, %s, %s, %s, %s) \"\n",
-    "        session.execute(query, (line[1], line[4], int(line[10]), int(line[8]), line[9]))"
+    "        session.execute(query, (line[9], int(line[10]), line[1], line[4]))"
    ]
   },
   {
@@ -466,7 +466,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "query = \"SELECT first_name, last_name FROM query3 WHERE song = 'All Hands Against His Own'\"\n",
+    "query = \"SELECT first_name, last_name FROM users_listened_song WHERE song = 'All Hands Against His Own'\"\n",
     "try:\n",
     "    rows = session.execute(query)\n",
     "    df = pd.DataFrame(list(rows), columns=['first_name', 'last_name'])\n",
@@ -488,19 +488,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "query = \"DROP TABLE query1\"\n",
+    "query = \"DROP TABLE artist_song_length\"\n",
     "try:\n",
     "    session.execute(query)\n",
     "except Exception as e:\n",
     "    print(e)\n",
     "\n",
-    "query = \"DROP TABLE query2\"\n",
+    "query = \"DROP TABLE song_playlist_session\"\n",
     "try:\n",
     "    session.execute(query)\n",
     "except Exception as e:\n",
     "    print(e)\n",
     "\n",
-    "query = \"DROP TABLE query3\"\n",
+    "query = \"DROP TABLE users_listened_song\"\n",
     "try:\n",
     "    session.execute(query)\n",
     "except Exception as e:\n",
