Fixed bugs in query 3

--- a/Project_1B_ Project_Template.ipynb
+++ b/Project_1B_ Project_Template.ipynb
@@ -437,7 +437,7 @@
     }
    ],
    "source": [
-    "query = \"CREATE TABLE IF NOT EXISTS users_listened_song (song text, user_id int, session_id int, first_name text, last_name text,  PRIMARY KEY (song, user_id))\"\n",
+    "query = \"CREATE TABLE IF NOT EXISTS users_listened_song (song text, user_id int, first_name text, last_name text,  PRIMARY KEY (song, user_id))\"\n",
     "try:\n",
     "    session.execute(query)\n",
     "except Exception as e:\n",
@@ -456,7 +456,7 @@
     "    next(csvreader)\n",
     "    for line in csvreader:\n",
     "        query = \"INSERT INTO users_listened_song (song, user_id, first_name, last_name)\"\n",
-    "        query = query + \" VALUES (%s, %s, %s, %s, %s) \"\n",
+    "        query = query + \" VALUES (%s, %s, %s, %s) \"\n",
     "        session.execute(query, (line[9], int(line[10]), line[1], line[4]))"
    ]
   },
